--- a/site/index.html
+++ b/site/index.html
@@ -71,21 +71,21 @@
 
 		<table id="legend--subscribe" class="legend">
 			<tr>
-				<td style="text-align: justify">data is updated every two months. get notified of updates in summary format.</td>
+				<td style="text-align: justify">data is updated monthly. get notified of updates in summary format. no spam.</td>
 			</tr>
 		</table>
 	</main>
 	<footer>
 		<a class="text footer-text" href="http://twitter.com/shapiro">julian shapiro</a>
 		<span class="text footer-text--divider">+</span>
-		<a class="text footer-text" href="http://mattduvall.com/">matt duvall</a>
+		<a class="text footer-text" href="http://twitter.com/mduvall_">matt duvall</a>
 		<span class="text footer-text--divider">+</span>
 		<a class="text footer-text" href="http://stripe.com/blog/crawler">stripe</a>
 	</footer>
-	<script src="../js/libs/cash.js"></script>
-	<script src="../velocity/build/velocity.js"></script>
-	<script src="../velocity/build/velocity.ui.js"></script>
-	<script src="../velocity/velocity.ui.custom.js"></script>
+	<script src="../../js/libs/cash.js"></script>
+	<script src="../../velocity/build/velocity.js"></script>
+	<script src="../../velocity/build/velocity.ui.js"></script>
+	<script src="../../velocity/velocity.ui.custom.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
