--- a/site/index.html
+++ b/site/index.html
@@ -139,10 +139,10 @@
 		<span class="footer-text--divider">+</span>
 		<a class="footer-text" href="http://digitalocean.com/blog/libscore">digital ocean</a>
 	</footer>
-	<script src="../../js/libs/cash.js"></script>
-	<script src="../../velocity/build/velocity.js"></script>
-	<script src="../../velocity/build/velocity.ui.js"></script>
-	<script src="../../velocity/velocity.ui.custom.js"></script>
-	<script src="script.js"></script>
+	<script src="js/cash.min.js"></script>
+	<script src="js/velocity.min.js"></script>
+	<script src="js/velocity.ui.min.js"></script>
+	<script src="js/velocity.ui.custom.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
