--- a/site/index.html
+++ b/site/index.html
@@ -35,7 +35,7 @@
 				It detects modules loaded via RequireJS, jQuery plugins, window variables produced by non-jQuery plugins, and external scripts<span>.</span>
 			</p>
 			<p>
-				Libscore was created by <a href="http://twitter.com/shapiro">Julian Shapiro</a>. <a href="http://twitter.com/mduvall_">Matt DuVall</a> built the API<span>.</span>
+				Libscore was created by <a href="http://twitter.com/shapiro">Julian Shapiro</a>. <a href="http://twitter.com/neutralthoughts">Thomas Davis</a> built the API<span>.</span>
 			</p>
 			<p>
 				Sponsored by <a href="http://stripe.com">Stripe</a> and <a href="http://digitalocean.com">Digital Ocean</a><span>.</span>
@@ -133,8 +133,8 @@
 		</div>
 	</main>
 	<footer>
-		<a class="footer-text" href="http://twitter.com/shapiro">julian shapiro</a>
-		<span class="footer-text--divider">+</span>
+		<!-- <a class="footer-text" href="http://twitter.com/shapiro">julian shapiro</a>
+		<span class="footer-text--divider">+</span> -->
 		<a class="footer-text" href="http://stripe.com/blog/libscore">stripe</a>
 		<span class="footer-text--divider">+</span>
 		<a class="footer-text" href="http://digitalocean.com/blog/libscore">digital ocean</a>
