--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 	<link href="css/hint.css" rel="stylesheet">
 </head>
 <body>
-	<div id="body-bigScore"></div>
+	<div id="body-bigCount"></div>
 	<div id="body-error">X</div>
 	<img id="body-flare" src="flare.png" />
 
