hooked up domains search

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<td>domain:</td>
 				<td class="hint--right" data-hint="Find all libraries on a site.">
 					<span class="legend--search-option" data-query="tumblr.com">tumblr<span class="accent">.</span>com</span>,
-					<span class="legend--search-option" data-query="do.co">do<span class="accent">.</span>co</span>
+					<span class="legend--search-option" data-query="stripe.com">stripe<span class="accent">.</span>com</span>
 				</td>
 			</tr>
 		</table>
