--- a/site/index.html
+++ b/site/index.html
@@ -32,13 +32,13 @@
 				It provides open source developers the data they need to measure their impact<span>.</span>
 			</p>
 			<p>
-				It detects modules loaded via RequireJS, jQuery plugins, window variables produced by non-jQuery plugins, and external scripts<span>.</span>
+				It detects modules loaded via RequireJS, jQuery plugins, window variables produced by non-jQuery libraries, and external scripts<span>.</span>
 			</p>
 			<p>
 				Libscore was created by <a href="http://twitter.com/shapiro">Julian Shapiro</a>. <a href="http://twitter.com/neutralthoughts">Thomas Davis</a> built the API<span>.</span>
 			</p>
 			<p>
-				Sponsored by <a href="http://stripe.com">Stripe</a> and <a href="http://digitalocean.com">Digital Ocean</a><span>.</span>
+				It's sponsored by <a href="http://stripe.com">Stripe</a> and <a href="http://digitalocean.com">Digital Ocean</a><span>.</span>
 			</p>
 			<p>
 				Learn more <a href="http://hacks.mozilla.org/libscore/#usage">here</a><span>.</span>
