hook api into site

--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
 		<table id="legend--search" class="legend">
 			<tr>
 				<td>global:</td>
-				<td class="hint--right" data-hint="Find sites with a global variable.">
+				<td class="hint--right" data-hint="Find sites with a global variable (case sensitive).">
 					<span class="legend--search-option" data-query="jQuery">jQuery</span>,
 					<span class="legend--search-option" data-query="Modernizr">Modernizr</span>
 				</td>
 			</tr>
 			<tr>
 				<td>jquery:</td>
-				<td class="hint--right" data-hint="Find sites with a jQuery plugin.">
+				<td class="hint--right" data-hint="Find sites with a jQuery plugin (case sensitive).">
 					<span class="legend--search-option" data-query="$.Velocity">$<span class="accent">.</span>Velocity</span>,
 					<span class="legend--search-option" data-query="$.fn.ui">$<span class="accent">.</span>fn<span class="accent">.</span>ui</span>
 				</td>
@@ -121,7 +121,7 @@
 				<td>domain:</td>
 				<td class="hint--right" data-hint="Find all libraries on a site.">
 					<span class="legend--search-option" data-query="tumblr.com">tumblr<span class="accent">.</span>com</span>,
-					<span class="legend--search-option" data-query="stripe.com">stripe<span class="accent">.</span>com</span>
+					<span class="legend--search-option" data-query="do.co">do<span class="accent">.</span>co</span>
 				</td>
 			</tr>
 		</table>
