hard kill timeout moved to crawler runner

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="body-bigCount"></div>
 	<div id="body-error">X</div>
-	<img id="body-flare" src="flare.png" />
+	<img id="body-flare" src="images/flare.png" />
 
 	<header id="header">
 		<div id="header-code">
