--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
 			<tr>
 				<td>jquery</td>
 				<td class="hint--right" data-hint="Find sites with a jQuery plugin (case sensitive).">
-					<span class="legend--search-option" data-query="$.fn.velocity">$<span class="accent">.</span>fn<span class="accent">.</span>velocity</span>,
+					<span class="legend--search-option" data-query="$.fn.fancybox">$<span class="accent">.</span>fn<span class="accent">.</span>fancybox</span>,
 					<span class="legend--search-option" data-query="$.ui">$<span class="accent">.</span>ui</span>
 				</td>
 			</tr>
 			<tr>
 				<td>script</td>
 				<td class="hint--right" data-hint="Find sites with an external script.">
-					<span class="legend--search-option" data-query="script:s.adroll.com">script<span class="accent">:</span>s<span class="accent">.</span>adroll<span class="accent">.</span>com</span>
+					<span class="legend--search-option" data-query="script:stats.wp.com">script<span class="accent">:</span>stats<span class="accent">.</span>wp<span class="accent">.</span>com</span>
 				</td>
 			</tr>
 			<tr>
 				<td>domain</td>
 				<td class="hint--right" data-hint="Retrieve all libraries on a site.">
-					<span class="legend--search-option" data-query="tumblr.com">tumblr<span class="accent">.</span>com</span>,
-					<span class="legend--search-option" data-query="do.co">do<span class="accent">.</span>co</span>
+					<span class="legend--search-option" data-query="stripe.com">stripe<span class="accent">.</span>com</span>,
+					<span class="legend--search-option" data-query="usps.com">usps<span class="accent">.</span>com</span>
 				</td>
 			</tr>
 		</table>
@@ -151,6 +151,7 @@
 	<script src="js/velocity.min.js"></script>
 	<script src="js/velocity.ui.min.js"></script>
 	<script src="js/velocity.ui.custom.min.js"></script>
+	<script src="js/numeral.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
