--- a/site/index.html
+++ b/site/index.html
@@ -91,8 +91,8 @@
 
 		<div id="field--search" class="field">
 			<span class="field-label">
-				Se<o>a</o>rch
-				<a id="field--search-help" class="hint" data-hint="Learn how Libscore's search works." href="https://medium.com/@Shapiro/be93165fa497#Howtosearch">(Help)</a>
+				Lo<o>o</o>kup
+				<a id="field--search-help" class="hint" data-hint="Learn how Libscore's lookup works." href="https://medium.com/@Shapiro/be93165fa497#Howtosearch">(Help)</a>
 			</span>
 			<div class="field-input-container">
 				<div class="field-input-symbols"></div>
