--- a/site/index.html
+++ b/site/index.html
@@ -3,15 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Libscore</title>
-	<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro:300" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
-	<link href="css/hint.css" rel="stylesheet">
 </head>
 <body>
 	<div id="body-bigCount"></div>
-	<div id="body-error">X</div>
-	<img id="body-flare" src="images/flare.png" />
+	<div id="body-bigError">X</div>
 
 	<header id="header">
 		<div id="header-code">
@@ -20,134 +17,71 @@
 		<div id="header-logo">
 			Libsc<o>o<span></span></o>re
 		</div>
-		<div id="header-hr"></div>
 	</header>
 	
 	<main>
-		<div id="about">
-			<p>
-				Libscore scans the top million sites to detect JavaScript library usage<span>.</span>
-			</p>
-			<p>
-				It provides open source developers the data they need to measure their impact<span>.</span>
-			</p>
-			<p>
-				It detects modules loaded via RequireJS, jQuery plugins, window variables produced by non-jQuery libraries, and external scripts<span>.</span>
-			</p>
-			<p>
-				Read the <a href="https://medium.com/@Shapiro/be93165fa497">full overview</a><span>.</span>
-			</p>
-			<p>
-				Libscore was created by <a href="http://twitter.com/shapiro">Julian Shapiro</a> and <a href="http://twitter.com/neutralthoughts">Thomas Davis</a><span>.</span>
-			</p>
-			<p>
-				It's sponsored by <a href="http://stripe.com">Stripe</a> and <a href="http://digitalocean.com">Digital Ocean</a><span>.</span>
-			</p>
+		<div class="sectionHeader">
+			Overview
+		</div>
+		<div id="slogan">
+			Libscore scans the top <strong>million</strong> sites on the web to collect stats on <strong>JavaScript library</strong> usage. Explore this month's data below.
 		</div>
 
-		<div id="description">
-			Search the top million sites for JavaScript libraries<span>.</span>
+		<div id="sectionHeader--search" class="sectionHeader">
+			Se<o>a</o>rch
 		</div>
-
-		<form 
-			id="field--subscribe"
-			class="field hint--right"
-			data-hint="Receive a monthly data update."
-			action="//libscore.us9.list-manage.com/subscribe/post?u=30c0d4c5d64d5d9fcf7b76792&amp;id=69666fd115" method="post" name="mc-embedded-subscribe-form"
-			target="_blank"
-			novalidate
-		>
-			<span class="field-label">
-				Su<o>b</o>scribe
-			</span>
-			<div class="field-input-container">
-				<div class="field-input-symbols"></div>
-				<input id="subscribe" name="EMAIL" class="field-input" type="text" value="email@domain.com" />
+		<div id="query">
+			<div id="search_">
+				<div id="searchSymbols"></div>
+				<input id="search" class="field-input" type="text" value="" />
 			</div>
-			<div style="position: absolute; left: -5000px;">
-				<input type="text" name="b_30c0d4c5d64d5d9fcf7b76792_69666fd115" tabindex="-1" value="">
-			</div>
-		</form>
-
-		<div id="field--charts" class="field">
-			<span class="field-label">
-				Charts
-			</span>
+			<span id="query_or">or</span>
+			<span data-query="*">Top Libs</span>
+			<span data-query="script:*">Top Scripts</span>
+			<span data-query="*.*">Top Sites</span>
+			<!-- top rising, top falling -->
 		</div>
-		<table id="legend--search-charts" class="legend">
-			<tr>
-				<td>
-					<span class="legend--search-option" data-query="*">Top Libs</span>
-				</td>
-				<td>
-					<span class="legend--search-option" data-query="*.*">Top Sites</span>
-				</td>
-				<td>
-					&nbsp;&nbsp;<span class="legend--search-option" data-query="script:*">Top Scripts</span>
-				</td>
-				<!-- top rising, top falling -->
-			</tr>
-		</table>
+		<p>
+			In the search box above, enter the <strong>variable</strong> that a JavaScript library exposes itself under, e.g. <b data-query>jQuery</b>, <b data-query>Modernizr</b>, <b data-query>$.ui</b>, or <b data-query>$.fn.fancybox</b>.
+		</p>
+		<p>
+			You can also search for sites containing an external script by prefixing a query with <i>script:</i>, e.g. <b data-query>script:stats.wp.com</b> or <b data-query>script:use.typekit.net</b>.
+		</p>
+		<p>
+			Alternatively, you can retrieve all libraries used on a site by querying for its domain name, e.g. <b data-query>stripe.com</b> or <b data-query>digitalocean.com</b>.
+		</p>
 
-		<div id="field--search" class="field">
-			<span class="field-label">
-				Lo<o>o</o>kup
-				<a id="field--search-help" class="hint" data-hint="Learn how Libscore's lookup works." href="https://medium.com/@Shapiro/be93165fa497#Howtosearch">(Help)</a>
-			</span>
-			<div class="field-input-container">
-				<div class="field-input-symbols"></div>
-				<input id="search" class="field-input" type="text" value="jQuery" />
-			</div>
-		</div>
-		<table id="legend--search" class="legend">
-			<tr>
-				<td>global</td>
-				<td class="hint--right" data-hint="Find sites with a global variable (case sensitive).">
-					<span class="legend--search-option" data-query="Modernizr">Modernizr</span>,
-					<span class="legend--search-option" data-query="jQuery">jQuery</span>
-				</td>
-			</tr>
-			<tr>
-				<td>jquery</td>
-				<td class="hint--right" data-hint="Find sites with a jQuery plugin (case sensitive).">
-					<span class="legend--search-option" data-query="$.fn.fancybox">$<span class="accent">.</span>fn<span class="accent">.</span>fancybox</span>,
-					<span class="legend--search-option" data-query="$.ui">$<span class="accent">.</span>ui</span>
-				</td>
-			</tr>
-			<tr>
-				<td>script</td>
-				<td class="hint--right" data-hint="Find sites with an external script.">
-					<span class="legend--search-option" data-query="script:stats.wp.com">script<span class="accent">:</span>stats<span class="accent">.</span>wp<span class="accent">.</span>com</span>
-				</td>
-			</tr>
-			<tr>
-				<td>domain</td>
-				<td class="hint--right" data-hint="Retrieve all libraries on a site.">
-					<span class="legend--search-option" data-query="stripe.com">stripe<span class="accent">.</span>com</span>,
-					<span class="legend--search-option" data-query="usps.com">usps<span class="accent">.</span>com</span>
-				</td>
-			</tr>
-		</table>
-		<!-- delta trends -->
-		<div id="data--search-container">
-			<div id="data--search" class="data">
-				<table class="data-cols"><tr></tr></table>
-			</div>
-			<div class="dataScroll">
-				scroll ↓
-			</div>
+		<div id="data">
+			<div id="data_scroll">↓</div>
+			<div id="data_cols"></div>
+			<table></table>
 		</div>
 	</main>
+
 	<footer>
-		<a class="footer-text" href="http://stripe.com/blog/libscore">stripe</a>
-		<span class="footer-text--divider">+</span>
-		<a class="footer-text" href="http://digitalocean.com/blog/libscore">digital ocean</a>
-		<br />
 		<a class="footer-text" href="http://twitter.com/shapiro">julian shapiro</a>
 		<span class="footer-text--divider">+</span>
 		<a class="footer-text" href="http://twitter.com/neutralthoughts">thomas davis</a>
+		<span class="footer-text--divider">+</span>
+		<img id="stripe" src="images/stripe.png" />
+		<span class="footer-text--divider">+</span>
+		<img id="digitealocean" src="images/digitalocean.png" />
 	</footer>
-	<script src="js/cash.min.js"></script>
+
+	<form 
+		id="subscribe_"
+		class="field hint--right"
+		action="//libscore.us9.list-manage.com/subscribe/post?u=30c0d4c5d64d5d9fcf7b76792&amp;id=69666fd115" method="post" name="mc-embedded-subscribe-form"
+		target="_blank"
+		novalidate
+	>
+		<input id="subscribe" name="EMAIL" class="field-input" type="text" value="Get alerted when data is updated!" />
+		<div style="position: absolute; left: -5000px;">
+			<input type="text" name="b_30c0d4c5d64d5d9fcf7b76792_69666fd115" tabindex="-1" value="">
+		</div>
+	</form>
+
+	<script src="js/jquery.min.js"></script>
 	<script src="js/velocity.min.js"></script>
 	<script src="js/velocity.ui.min.js"></script>
 	<script src="js/velocity.ui.custom.min.js"></script>
