--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	</section>
 
 
+	<div id="searchSymbols"></div>
 
 	<div id="searchWrap">
-
 		<header id="header">
 			<div id="header-code">
 				<span id="header-code-object">window.</span><span id="header-code-property">closure()</span>
@@ -26,15 +26,14 @@
 				Libsc<o>o<span></span></o>re
 			</div>
 		</header>
-		
+
 		<main>
 			<div id="slogan">
-				Libscore scans the top <strong>million</strong> sites on the web to collect stats on <strong>JavaScript library</strong> usage. Explore this month's data. 
+				Libscore scans the top <strong>million</strong> sites on the web to collect <br> stats on <strong>JavaScript library</strong> usage. Explore this month's data. 
 			</div>
 
 			<div id="query">
 				<div id="search_">
-					<div id="searchSymbols"></div>
 					<input id="search" class="field-input" type="text" value="" placeholder="variable (case sensitive) or domain..." />
 				</div>
 				<div id="queryButtons">
@@ -43,11 +42,6 @@
 					<span><p data-query="*.*">Top Sites</p></span>
 				</div>
 			</div>
-
-			<!-- <div id="subSlogan">
-				<span>Explore this month's</span> <a href="#">javascript variables</a>, <a href="#">external scripts</a>, or <a href="#">domains</a>
-			</div> -->
-
 
 			<div id="howTo">
 				<p>
