Further design enhancements

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 				</div>
 			</div>
 
+			<a href="#" class="learnMore">How do I use LibScore?</a>
+
 			<div id="howTo">
 				<p>
 					In the search box above, enter the <strong>variable</strong> that a JavaScript library exposes itself under, e.g. <b data-query>jQuery</b>, <b data-query>Modernizr</b>, <b data-query>$.ui</b>, or <b data-query>$.fn.fancybox</b>.
@@ -77,13 +79,17 @@
 	</div>
 
 	<footer>
-		<a class="footer-text" href="http://twitter.com/shapiro">julian shapiro</a>
-		<span class="footer-text--divider">+</span>
-		<a class="footer-text" href="http://twitter.com/neutralthoughts">thomas davis</a>
-		<span class="footer-text--divider">+</span>
-		<img id="stripe" src="images/stripe.png" />
-		<span class="footer-text--divider">+</span>
-		<img id="digitealocean" src="images/digitalocean.png" />
+		<div id="authors">
+			<a class="footer-text" href="http://twitter.com/shapiro">Julian Shapiro</a>
+			<span class="footer-text--divider">+</span>
+			<a class="footer-text" href="http://twitter.com/neutralthoughts">Thomas Davis</a>
+		</div>
+		
+		<div id="sponsors">
+			<a href="#"><img id="stripe" src="images/stripe.png" /></a>
+			<span class="footer-text--divider">+</span>
+			<a href="#"><img id="digitealocean" src="images/digitalocean.png" /></a>
+		</div>
 	</footer>
 
 	<script src="js/jquery.min.js"></script>
