--- a/site/data.html
+++ b/site/data.html
@@ -15,10 +15,12 @@
   </header>
 
   <div id="chartWrap">
-    <div class="holder-parent">
-      <h4>Top Library Penetration Percentages</h4>
-      <div class="holder">
-        <canvas id="topLib" width="500" height="500"/>
+    <div id="innerChart">
+      <div class="holder-parent">
+        <h4>Top Library Penetration Percentages</h4>
+        <div class="holder">
+          <canvas id="topLib" width="280" height="280"/>
+        </div>
       </div>
     </div>
   </div>
