Added in second chart
and optimized chart js

--- a/data.html
+++ b/data.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Libscore Data</title>
+	<title>Libscore - The state of JavaScript</title>
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
 </head>
@@ -12,6 +12,7 @@
     <div id="header-logo">
       <a href="index.html">Libsc<o>o<span></span></o>re</a>
     </div>
+    <h1>The current state of Javascript</h1>
   </header>
 
   <div id="chartWrap">
@@ -22,6 +23,14 @@
           <canvas id="topLib" width="280" height="280"/>
         </div>
       </div>
+
+      <div class="holder-parent">
+        <h4>Top Script Penetration Percentages</h4>
+        <div class="holder">
+          <canvas id="topScript" width="280" height="280"/>
+        </div>
+      </div>
+
     </div>
   </div>
 
