--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 			<a class="footer-text" href="http://twitter.com/shapiro">Julian Shapiro</a>
 			<span class="footer-text--divider">+</span>
 			<a class="footer-text" href="http://twitter.com/neutralthoughts">Thomas Davis</a>
+			<span class="footer-text--divider">+</span>
+			<a class="footer-text" href="http://twitter.com/chasingUX">Jesse Chase</a>
 		</div>
 		
 		<div id="sponsors">
