Update and improve css
plus include newsletter form

--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 			target="_blank"
 			novalidate
 		>
-			<input id="subscribe" name="EMAIL" class="field-input" type="text" placeholder="Get alerted when data is updated!" />
-			<div style="position: absolute; left: -5000px;">
-				<input type="text" name="b_30c0d4c5d64d5d9fcf7b76792_69666fd115" tabindex="-1" value="">
+			<input id="subscribe" name="EMAIL" class="field-input" type="text" />
+			<div>
+				<p>Get notified when a new library explodes onto the scene!</p>
+				<input type="text" placeholder="Enter Email Address" name="b_30c0d4c5d64d5d9fcf7b76792_69666fd115" tabindex="-1" value="">
 			</div>
 		</form>
 	</div>
@@ -80,9 +81,9 @@
 		</div>
 		
 		<div id="sponsors">
-			<a href="#"><img id="stripe" src="images/stripe.png" /></a>
+			<a href="https://stripe.com" id="stripe"/></a>
 			<span class="footer-text--divider">+</span>
-			<a href="#"><img id="digitealocean" src="images/digitalocean.png" /></a>
+			<a href="https://digitalocean.com" id="digitalocean"/></a>
 		</div>
 	</footer> 
 
