Added link to graphs page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				<p>
 					Alternatively, you can retrieve all libraries used on a site by querying for its domain name, e.g. <b data-query>stripe.com</b> or <b data-query>digitalocean.com</b>.
 				</p>
+				<p class="graphs"><a href="data.html">View Trending Data</a></p>
 			</div>
 		</main>
 
@@ -66,7 +67,7 @@
 	</div>
 
 	<div id="data">
-		<div id="data_scroll">↓</div>
+		<!-- <div id="data_scroll">↓</div> -->
 		<div id="data_cols"></div>
 		<table></table>
 	</div>
