--- a/data.html
+++ b/data.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-	<footer>
+	<!-- <footer>
 		<div id="authors">
 			<a class="footer-text" href="http://twitter.com/shapiro">Julian Shapiro</a>
 			<span class="footer-text--divider">+</span>
@@ -46,7 +46,7 @@
 			<span class="footer-text--divider">+</span>
 			<a href="#"><img id="digitealocean" src="images/digitalocean.png" /></a>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script src="js/jquery.min.js"></script>
   <script src="js/Chart.min.js"></script>
