Fixed data loading glitch

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 
 	<div id="data">
 		<!-- <div id="data_scroll">↓</div> -->
-		<div id="data_cols"></div>
+		<div id="col_wrap">
+			<div id="data_cols"></div>
+		</div>
 		<table></table>
 	</div>
 
