Mixed Data Types

--- a/data.html
+++ b/data.html
@@ -17,10 +17,10 @@
 
   <div id="chartWrap">
     <ul>
-      <li class="holder-parent">
+      <li class="holder-parent" id="c1">
         <h4>Top Library Penetration Percentages</h4>
-        <div class="holder">
-          <canvas id="topLib" width="210" height="210"/>
+        <div class="holder bar">
+          <canvas id="topLib" width="235" height="235"/>
         </div>
       </li>
 
